# Axum

./: .env  Cargo.toml
src/: lib.rs  main.rs
src/routes/: custom_json_extractor.rs  get_json.rs  hello_world.rs  middleware_message.rs  mirror_body_json.rs  mirror_user_agent.rs  mod.rs  path_variables.rs  query_params.rs  set_middleware_custom_header.rs  validate_with_serde.rs
