[package]
name = "Axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
headers = "0.4.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "rt"] }
tower-http = { version = "0.5.2", features = ["cors"] }
typed-headers = "0.2.0"
