[package]
name = "Axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
headers = "0.4.0"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "rt"] }
tower-http = { version = "0.5.2", features = ["cors"] }
typed-headers = "0.2.0"
